# inverse-scaling-cot

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
data/splits/: aqua_sample_ids.jsonl  arc_challenge_sample_ids.jsonl  hellaswag_sample_ids.jsonl  logiqa_sample_ids.jsonl  openbookqa_sample_ids.jsonl
docs/: decisions.md  experimental_design.md  prompt_templates.md  run_experiments.md
results/accuracy/: config.json
results/accuracy/Qwen_Qwen2.5-0.5B-Instruct__aqua/: accuracy.json
results/accuracy/Qwen_Qwen2.5-0.5B-Instruct__arc_challenge/: accuracy.json
results/accuracy/Qwen_Qwen2.5-0.5B-Instruct__hellaswag/: accuracy.json
results/accuracy/Qwen_Qwen2.5-0.5B-Instruct__logiqa/: accuracy.json
results/accuracy/Qwen_Qwen2.5-0.5B-Instruct__openbookqa/: accuracy.json
results/accuracy/Qwen_Qwen2.5-1.5B-Instruct__aqua/: accuracy.json
results/accuracy/Qwen_Qwen2.5-1.5B-Instruct__arc_challenge/: accuracy.json
results/accuracy/Qwen_Qwen2.5-1.5B-Instruct__hellaswag/: accuracy.json
results/accuracy/Qwen_Qwen2.5-1.5B-Instruct__logiqa/: accuracy.json
results/accuracy/Qwen_Qwen2.5-1.5B-Instruct__openbookqa/: accuracy.json
results/regression/: config.json  decomposition.json  regression_table.csv
results/shuffled_cot/: config.json
src/: __init__.py
src/data/: loader.py  sampler.py
src/generation/: engine.py  runner.py  templates.py
src/metrics/: accuracy.py  faithfulness.py  regression.py
src/utils/: config.py  io.py  models.py  seed.py
tests/: test_data.py  test_extraction.py  test_io.py  test_metrics.py  test_templates.py
(+414 files in other folders)
